// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatsTestCases should print correct stats for char-based-offset-error-span 1`] = `
{
  "errors": [
    {
      "formatted": "error[scss]: Sass Error
  ┌─ tests/statsCases/char-based-offset-error-span/index.scss:5:10
  │
5 │   wrong: $wrong;
  │          ^^^^^^ Undefined variable.

",
      "message": "Undefined variable.",
    },
  ],
  "errorsCount": 1,
  "warnings": [],
  "warningsCount": 0,
}
`;

exports[`StatsTestCases should print correct stats for char-based-offset-error-span 2`] = `
"
error[scss]: Sass Error
  ┌─ tests/statsCases/char-based-offset-error-span/index.scss:5:10
  │
5 │   wrong: $wrong;
  │          ^^^^^^ Undefined variable.

"
`;

exports[`StatsTestCases should print correct stats for filename 1`] = `
{
  "assets": [
    {
      "chunkNames": [
        "main",
      ],
      "chunks": [
        "main",
      ],
      "emitted": true,
      "info": {
        "development": false,
        "hotModuleReplacement": false,
      },
      "name": "main.xxxx.js",
      "size": 4071,
      "type": "asset",
    },
    {
      "chunkNames": [],
      "chunks": [
        "dynamic_js",
      ],
      "emitted": true,
      "info": {
        "development": false,
        "hotModuleReplacement": false,
      },
      "name": "dynamic_js.xxxx.js",
      "size": 338,
      "type": "asset",
    },
  ],
  "chunks": [
    {
      "entry": false,
      "files": [
        "dynamic_js.xxxx.js",
      ],
      "id": "dynamic_js",
      "initial": false,
      "names": [],
      "size": 32,
      "type": "chunk",
    },
    {
      "entry": true,
      "files": [
        "main.xxxx.js",
      ],
      "id": "main",
      "initial": true,
      "names": [
        "main",
      ],
      "size": 38,
      "type": "chunk",
    },
  ],
  "entrypoints": {
    "main": {
      "assets": [
        {
          "name": "main.xxxx.js",
          "size": 4071,
        },
      ],
      "assetsSize": 4071,
      "chunks": [
        "main",
      ],
      "name": "main",
    },
  },
  "errors": [],
  "errorsCount": 0,
  "hash": "901f4924ec5f8d25",
  "modules": [
    {
      "chunks": [
        "main",
      ],
      "id": "2",
      "identifier": "javascript/auto|<PROJECT_ROOT>/tests/statsCases/filename/index.js",
      "issuerPath": [],
      "moduleType": "javascript/auto",
      "name": "./index.js",
      "reasons": [
        {},
      ],
      "size": 38,
      "type": "module",
    },
    {
      "chunks": [
        "dynamic_js",
      ],
      "id": "471",
      "identifier": "javascript/auto|<PROJECT_ROOT>/tests/statsCases/filename/dynamic.js",
      "issuer": "javascript/auto|<PROJECT_ROOT>/tests/statsCases/filename/index.js",
      "issuerId": "2",
      "issuerName": "./index.js",
      "issuerPath": [
        {
          "id": "2",
          "identifier": "javascript/auto|<PROJECT_ROOT>/tests/statsCases/filename/index.js",
          "name": "./index.js",
        },
      ],
      "moduleType": "javascript/auto",
      "name": "./dynamic.js",
      "reasons": [
        {
          "moduleId": "2",
          "moduleIdentifier": "javascript/auto|<PROJECT_ROOT>/tests/statsCases/filename/index.js",
          "moduleName": "./index.js",
        },
      ],
      "size": 32,
      "type": "module",
    },
  ],
  "warnings": [],
  "warningsCount": 0,
}
`;

exports[`StatsTestCases should print correct stats for filename 2`] = `
"Hash: 901f4924ec5f8d25
             Asset       Size      Chunks             Chunk Names
      main.xxxx.js   3.98 KiB        main  [emitted]  main
dynamic_js.xxxx.js  338 bytes  dynamic_js  [emitted]  
Entrypoint main = main.xxxx.js
chunk {dynamic_js} dynamic_js.xxxx.js 32 bytes
chunk {main} main.xxxx.js (main) 38 bytes [entry]
[2] ./index.js 38 bytes {main}
    
[471] ./dynamic.js 32 bytes {dynamic_js}
    [2]"
`;

exports[`StatsTestCases should print correct stats for hot+production 1`] = `
{
  "assets": [
    {
      "chunkNames": [
        "main",
      ],
      "chunks": [
        "main",
      ],
      "emitted": true,
      "info": {
        "development": false,
        "hotModuleReplacement": false,
      },
      "name": "bundle.js",
      "size": 8952,
      "type": "asset",
    },
  ],
  "chunks": [
    {
      "entry": true,
      "files": [
        "bundle.js",
      ],
      "id": "main",
      "initial": true,
      "names": [
        "main",
      ],
      "size": 25,
      "type": "chunk",
    },
  ],
  "entrypoints": {
    "main": {
      "assets": [
        {
          "name": "bundle.js",
          "size": 8952,
        },
      ],
      "assetsSize": 8952,
      "chunks": [
        "main",
      ],
      "name": "main",
    },
  },
  "errors": [],
  "errorsCount": 0,
  "hash": "70f95b20e7c920dd",
  "modules": [
    {
      "chunks": [
        "main",
      ],
      "id": "2",
      "identifier": "javascript/auto|<PROJECT_ROOT>/tests/statsCases/hot+production/index.js",
      "issuerPath": [],
      "moduleType": "javascript/auto",
      "name": "./index.js",
      "reasons": [
        {},
      ],
      "size": 25,
      "type": "module",
    },
  ],
  "warnings": [],
  "warningsCount": 0,
}
`;

exports[`StatsTestCases should print correct stats for hot+production 2`] = `
"Hash: 70f95b20e7c920dd
    Asset      Size  Chunks             Chunk Names
bundle.js  8.74 KiB    main  [emitted]  main
Entrypoint main = bundle.js
chunk {main} bundle.js (main) 25 bytes [entry]
[2] ./index.js 25 bytes {main}
    "
`;

exports[`StatsTestCases should print correct stats for identifier-let-strict-mode 1`] = `
{
  "errors": [
    {
      "formatted": "error[javascript]: JavaScript parsing error
  ┌─ tests/statsCases/identifier-let-strict-mode/index.js:1:5
  │
1 │ let let = let;
  │     ^^^ \`let\` cannot be used as an identifier in strict mode

",
      "message": "\`let\` cannot be used as an identifier in strict mode",
    },
    {
      "formatted": "error[javascript]: JavaScript parsing error
  ┌─ tests/statsCases/identifier-let-strict-mode/index.js:1:11
  │
1 │ let let = let;
  │           ^^^ \`let\` cannot be used as an identifier in strict mode

",
      "message": "\`let\` cannot be used as an identifier in strict mode",
    },
  ],
  "errorsCount": 2,
  "warnings": [],
  "warningsCount": 0,
}
`;

exports[`StatsTestCases should print correct stats for identifier-let-strict-mode 2`] = `
"
error[javascript]: JavaScript parsing error
  ┌─ tests/statsCases/identifier-let-strict-mode/index.js:1:5
  │
1 │ let let = let;
  │     ^^^ \`let\` cannot be used as an identifier in strict mode



error[javascript]: JavaScript parsing error
  ┌─ tests/statsCases/identifier-let-strict-mode/index.js:1:11
  │
1 │ let let = let;
  │           ^^^ \`let\` cannot be used as an identifier in strict mode

"
`;

exports[`StatsTestCases should print correct stats for normal-errors 1`] = `
{
  "errors": [
    {
      "formatted": "error[internal]: Resolve error
  ┌─ tests/statsCases/normal-errors/index.js:1:1
  │
1 │ import "not-exist";
  │ ^^^^^^^^^^^^^^^^^^^ Failed to resolve not-exist in <PROJECT_ROOT>/tests/statsCases/normal-errors/index.js

",
      "message": "Failed to resolve not-exist in <PROJECT_ROOT>/tests/statsCases/normal-errors/index.js",
    },
  ],
  "errorsCount": 1,
  "warnings": [],
  "warningsCount": 0,
}
`;

exports[`StatsTestCases should print correct stats for normal-errors 2`] = `
"
error[internal]: Resolve error
  ┌─ tests/statsCases/normal-errors/index.js:1:1
  │
1 │ import "not-exist";
  │ ^^^^^^^^^^^^^^^^^^^ Failed to resolve not-exist in <PROJECT_ROOT>/tests/statsCases/normal-errors/index.js

"
`;

exports[`StatsTestCases should print correct stats for optimization-runtime-chunk 1`] = `
{
  "chunks": [
    {
      "entry": true,
      "files": [
        "e1.js",
      ],
      "id": "e1",
      "initial": true,
      "names": [
        "e1",
      ],
      "size": 27,
      "type": "chunk",
    },
    {
      "entry": false,
      "files": [
        "e1~runtime.js",
      ],
      "id": "e1~runtime",
      "initial": true,
      "names": [
        "e1~runtime",
      ],
      "size": 0,
      "type": "chunk",
    },
    {
      "entry": true,
      "files": [
        "e2.js",
      ],
      "id": "e2",
      "initial": true,
      "names": [
        "e2",
      ],
      "size": 27,
      "type": "chunk",
    },
    {
      "entry": false,
      "files": [
        "e2~runtime.js",
      ],
      "id": "e2~runtime",
      "initial": true,
      "names": [
        "e2~runtime",
      ],
      "size": 0,
      "type": "chunk",
    },
  ],
  "entrypoints": {
    "e1": {
      "assets": [
        {
          "name": "e1.js",
          "size": 259,
        },
        {
          "name": "e1~runtime.js",
          "size": 1623,
        },
      ],
      "assetsSize": 1882,
      "chunks": [
        "e1",
        "e1~runtime",
      ],
      "name": "e1",
    },
    "e2": {
      "assets": [
        {
          "name": "e2.js",
          "size": 259,
        },
        {
          "name": "e2~runtime.js",
          "size": 1623,
        },
      ],
      "assetsSize": 1882,
      "chunks": [
        "e2",
        "e2~runtime",
      ],
      "name": "e2",
    },
  },
  "errors": [],
  "errorsCount": 0,
  "warnings": [],
  "warningsCount": 0,
}
`;

exports[`StatsTestCases should print correct stats for optimization-runtime-chunk 2`] = `
"Entrypoint e1 = e1.js e1~runtime.js
Entrypoint e2 = e2.js e2~runtime.js"
`;

exports[`StatsTestCases should print correct stats for optimization-runtime-chunk-multiple 1`] = `
{
  "chunks": [
    {
      "entry": true,
      "files": [
        "e1.js",
      ],
      "id": "e1",
      "initial": true,
      "names": [
        "e1",
      ],
      "size": 27,
      "type": "chunk",
    },
    {
      "entry": true,
      "files": [
        "e2.js",
      ],
      "id": "e2",
      "initial": true,
      "names": [
        "e2",
      ],
      "size": 27,
      "type": "chunk",
    },
    {
      "entry": false,
      "files": [
        "runtime~e1.js",
      ],
      "id": "runtime~e1",
      "initial": true,
      "names": [
        "runtime~e1",
      ],
      "size": 0,
      "type": "chunk",
    },
    {
      "entry": false,
      "files": [
        "runtime~e2.js",
      ],
      "id": "runtime~e2",
      "initial": true,
      "names": [
        "runtime~e2",
      ],
      "size": 0,
      "type": "chunk",
    },
  ],
  "entrypoints": {
    "e1": {
      "assets": [
        {
          "name": "e1.js",
          "size": 253,
        },
        {
          "name": "runtime~e1.js",
          "size": 1623,
        },
      ],
      "assetsSize": 1876,
      "chunks": [
        "e1",
        "runtime~e1",
      ],
      "name": "e1",
    },
    "e2": {
      "assets": [
        {
          "name": "e2.js",
          "size": 253,
        },
        {
          "name": "runtime~e2.js",
          "size": 1623,
        },
      ],
      "assetsSize": 1876,
      "chunks": [
        "e2",
        "runtime~e2",
      ],
      "name": "e2",
    },
  },
  "errors": [],
  "errorsCount": 0,
  "warnings": [],
  "warningsCount": 0,
}
`;

exports[`StatsTestCases should print correct stats for optimization-runtime-chunk-multiple 2`] = `
"Entrypoint e1 = e1.js runtime~e1.js
Entrypoint e2 = e2.js runtime~e2.js"
`;

exports[`StatsTestCases should print correct stats for optimization-runtime-chunk-single 1`] = `
{
  "chunks": [
    {
      "entry": true,
      "files": [
        "e1.js",
      ],
      "id": "e1",
      "initial": true,
      "names": [
        "e1",
      ],
      "size": 27,
      "type": "chunk",
    },
    {
      "entry": true,
      "files": [
        "e2.js",
      ],
      "id": "e2",
      "initial": true,
      "names": [
        "e2",
      ],
      "size": 27,
      "type": "chunk",
    },
    {
      "entry": false,
      "files": [
        "runtime.js",
      ],
      "id": "runtime",
      "initial": true,
      "names": [
        "runtime",
      ],
      "size": 0,
      "type": "chunk",
    },
  ],
  "entrypoints": {
    "e1": {
      "assets": [
        {
          "name": "e1.js",
          "size": 256,
        },
        {
          "name": "runtime.js",
          "size": 1620,
        },
      ],
      "assetsSize": 1876,
      "chunks": [
        "e1",
        "runtime",
      ],
      "name": "e1",
    },
    "e2": {
      "assets": [
        {
          "name": "e2.js",
          "size": 256,
        },
        {
          "name": "runtime.js",
          "size": 1620,
        },
      ],
      "assetsSize": 1876,
      "chunks": [
        "e2",
        "runtime",
      ],
      "name": "e2",
    },
  },
  "errors": [],
  "errorsCount": 0,
  "warnings": [],
  "warningsCount": 0,
}
`;

exports[`StatsTestCases should print correct stats for optimization-runtime-chunk-single 2`] = `
"Entrypoint e1 = e1.js runtime.js
Entrypoint e2 = e2.js runtime.js"
`;

exports[`StatsTestCases should print correct stats for optimization-runtime-chunk-true 1`] = `
{
  "chunks": [
    {
      "entry": true,
      "files": [
        "e1.js",
      ],
      "id": "e1",
      "initial": true,
      "names": [
        "e1",
      ],
      "size": 27,
      "type": "chunk",
    },
    {
      "entry": true,
      "files": [
        "e2.js",
      ],
      "id": "e2",
      "initial": true,
      "names": [
        "e2",
      ],
      "size": 27,
      "type": "chunk",
    },
    {
      "entry": false,
      "files": [
        "runtime~e1.js",
      ],
      "id": "runtime~e1",
      "initial": true,
      "names": [
        "runtime~e1",
      ],
      "size": 0,
      "type": "chunk",
    },
    {
      "entry": false,
      "files": [
        "runtime~e2.js",
      ],
      "id": "runtime~e2",
      "initial": true,
      "names": [
        "runtime~e2",
      ],
      "size": 0,
      "type": "chunk",
    },
  ],
  "entrypoints": {
    "e1": {
      "assets": [
        {
          "name": "e1.js",
          "size": 253,
        },
        {
          "name": "runtime~e1.js",
          "size": 1623,
        },
      ],
      "assetsSize": 1876,
      "chunks": [
        "e1",
        "runtime~e1",
      ],
      "name": "e1",
    },
    "e2": {
      "assets": [
        {
          "name": "e2.js",
          "size": 253,
        },
        {
          "name": "runtime~e2.js",
          "size": 1623,
        },
      ],
      "assetsSize": 1876,
      "chunks": [
        "e2",
        "runtime~e2",
      ],
      "name": "e2",
    },
  },
  "errors": [],
  "errorsCount": 0,
  "warnings": [],
  "warningsCount": 0,
}
`;

exports[`StatsTestCases should print correct stats for optimization-runtime-chunk-true 2`] = `
"Entrypoint e1 = e1.js runtime~e1.js
Entrypoint e2 = e2.js runtime~e2.js"
`;

exports[`StatsTestCases should print correct stats for parse-error 1`] = `
{
  "errors": [
    {
      "formatted": "error[javascript]: JavaScript parsing error
  ┌─ tests/statsCases/parse-error/b.js:6:8
  │
6 │ parser )
  │        ^ Expected ';', '}' or <eof>

",
      "message": "Expected ';', '}' or <eof>",
    },
  ],
  "errorsCount": 1,
  "warnings": [],
  "warningsCount": 0,
}
`;

exports[`StatsTestCases should print correct stats for parse-error 2`] = `
"
error[javascript]: JavaScript parsing error
  ┌─ tests/statsCases/parse-error/b.js:6:8
  │
6 │ parser )
  │        ^ Expected ';', '}' or <eof>

"
`;

exports[`StatsTestCases should print correct stats for resolve-overflow 1`] = `
{
  "assets": [
    {
      "chunkNames": [
        "main",
      ],
      "chunks": [
        "main",
      ],
      "emitted": true,
      "info": {
        "development": false,
        "hotModuleReplacement": false,
      },
      "name": "bundle.js",
      "size": 1070,
      "type": "asset",
    },
  ],
  "chunks": [
    {
      "entry": true,
      "files": [
        "bundle.js",
      ],
      "id": "main",
      "initial": true,
      "names": [
        "main",
      ],
      "size": 211,
      "type": "chunk",
    },
  ],
  "entrypoints": {
    "main": {
      "assets": [
        {
          "name": "bundle.js",
          "size": 1070,
        },
      ],
      "assetsSize": 1070,
      "chunks": [
        "main",
      ],
      "name": "main",
    },
  },
  "errors": [
    {
      "formatted": "error[internal]: Resolve error
  ┌─ tests/statsCases/resolve-overflow/index.js:1:1
  │
1 │ import { a } from "cycle-alias/a";
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Can't resolve "cycle-alias/a" in <PROJECT_ROOT>/tests/statsCases/resolve-overflow/index.js , maybe it had cycle alias

",
      "message": "Can't resolve "cycle-alias/a" in <PROJECT_ROOT>/tests/statsCases/resolve-overflow/index.js , maybe it had cycle alias",
    },
  ],
  "errorsCount": 1,
  "hash": "2cd6d5431067e030",
  "modules": [
    {
      "chunks": [
        "main",
      ],
      "id": "2",
      "identifier": "javascript/auto|<PROJECT_ROOT>/tests/statsCases/resolve-overflow/index.js",
      "issuerPath": [],
      "moduleType": "javascript/auto",
      "name": "./index.js",
      "reasons": [
        {},
      ],
      "size": 51,
      "type": "module",
    },
    {
      "chunks": [
        "main",
      ],
      "id": "259",
      "identifier": "missing|<PROJECT_ROOT>/tests/statsCases/resolve-overflowcycle-alias/acycle-alias/a",
      "issuer": "javascript/auto|<PROJECT_ROOT>/tests/statsCases/resolve-overflow/index.js",
      "issuerId": "2",
      "issuerName": "./index.js",
      "issuerPath": [
        {
          "id": "2",
          "identifier": "javascript/auto|<PROJECT_ROOT>/tests/statsCases/resolve-overflow/index.js",
          "name": "./index.js",
        },
      ],
      "moduleType": "javascript/auto",
      "name": "<PROJECT_ROOT>/tests/statsCases/resolve-overflowcycle-alias/a (missing)",
      "reasons": [
        {
          "moduleId": "2",
          "moduleIdentifier": "javascript/auto|<PROJECT_ROOT>/tests/statsCases/resolve-overflow/index.js",
          "moduleName": "./index.js",
        },
      ],
      "size": 160,
      "type": "module",
    },
  ],
  "warnings": [],
  "warningsCount": 0,
}
`;

exports[`StatsTestCases should print correct stats for resolve-overflow 2`] = `
"Hash: 2cd6d5431067e030
    Asset      Size  Chunks             Chunk Names
bundle.js  1.04 KiB    main  [emitted]  main
Entrypoint main = bundle.js
chunk {main} bundle.js (main) 211 bytes [entry]
[2] ./index.js 51 bytes {main}
    
[259] <PROJECT_ROOT>/tests/statsCases/resolve-overflowcycle-alias/a (missing) 160 bytes {main}
    [2]

error[internal]: Resolve error
  ┌─ tests/statsCases/resolve-overflow/index.js:1:1
  │
1 │ import { a } from "cycle-alias/a";
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Can't resolve "cycle-alias/a" in <PROJECT_ROOT>/tests/statsCases/resolve-overflow/index.js , maybe it had cycle alias

"
`;

exports[`StatsTestCases should print correct stats for resolve-unexpected-exports-in-pkg 1`] = `
{
  "assets": [
    {
      "chunkNames": [
        "main",
      ],
      "chunks": [
        "main",
      ],
      "emitted": true,
      "info": {
        "development": false,
        "hotModuleReplacement": false,
      },
      "name": "bundle.js",
      "size": 2386,
      "type": "asset",
    },
  ],
  "chunks": [
    {
      "entry": true,
      "files": [
        "bundle.js",
      ],
      "id": "main",
      "initial": true,
      "names": [
        "main",
      ],
      "size": 199,
      "type": "chunk",
    },
  ],
  "entrypoints": {
    "main": {
      "assets": [
        {
          "name": "bundle.js",
          "size": 2386,
        },
      ],
      "assetsSize": 2386,
      "chunks": [
        "main",
      ],
      "name": "main",
    },
  },
  "errors": [
    {
      "formatted": "Export should be relative path and start with "./", but got ../../index.js
",
      "message": "Export should be relative path and start with "./", but got ../../index.js",
    },
  ],
  "errorsCount": 1,
  "hash": "62665733b395e13",
  "modules": [
    {
      "chunks": [
        "main",
      ],
      "id": "2",
      "identifier": "javascript/auto|<PROJECT_ROOT>/tests/statsCases/resolve-unexpected-exports-in-pkg/index.js",
      "issuerPath": [],
      "moduleType": "javascript/auto",
      "name": "./index.js",
      "reasons": [
        {},
      ],
      "size": 39,
      "type": "module",
    },
    {
      "chunks": [
        "main",
      ],
      "id": "805",
      "identifier": "missing|<PROJECT_ROOT>/tests/statsCases/resolve-unexpected-exports-in-pkgpkg-apkg-a",
      "issuer": "javascript/auto|<PROJECT_ROOT>/tests/statsCases/resolve-unexpected-exports-in-pkg/index.js",
      "issuerId": "2",
      "issuerName": "./index.js",
      "issuerPath": [
        {
          "id": "2",
          "identifier": "javascript/auto|<PROJECT_ROOT>/tests/statsCases/resolve-unexpected-exports-in-pkg/index.js",
          "name": "./index.js",
        },
      ],
      "moduleType": "javascript/auto",
      "name": "<PROJECT_ROOT>/tests/statsCases/resolve-unexpected-exports-in-pkgpkg-a (missing)",
      "reasons": [
        {
          "moduleId": "2",
          "moduleIdentifier": "javascript/auto|<PROJECT_ROOT>/tests/statsCases/resolve-unexpected-exports-in-pkg/index.js",
          "moduleName": "./index.js",
        },
      ],
      "size": 160,
      "type": "module",
    },
  ],
  "warnings": [],
  "warningsCount": 0,
}
`;

exports[`StatsTestCases should print correct stats for resolve-unexpected-exports-in-pkg 2`] = `
"Hash: 62665733b395e13
    Asset      Size  Chunks             Chunk Names
bundle.js  2.33 KiB    main  [emitted]  main
Entrypoint main = bundle.js
chunk {main} bundle.js (main) 199 bytes [entry]
[2] ./index.js 39 bytes {main}
    
[805] <PROJECT_ROOT>/tests/statsCases/resolve-unexpected-exports-in-pkgpkg-a (missing) 160 bytes {main}
    [2]

Export should be relative path and start with "./", but got ../../index.js
"
`;

exports[`StatsTestCases should print correct stats for sass-warnings 1`] = `
{
  "errors": [],
  "errorsCount": 0,
  "warnings": [
    {
      "formatted": "warning[scss]: Sass Warning
  ┌─ tests/statsCases/sass-warnings/index.scss:2:11
  │
2 │   width: (12px/4px);
  │           ^^^^^^^^ Using / for division outside of calc() is deprecated and will be removed in Dart Sass 2.0.0.

Recommendation: math.div(12px, 4px) or calc(12px / 4px)

More info and automated migrator: https://sass-lang.com/d/slash-div

",
      "message": "Using / for division outside of calc() is deprecated and will be removed in Dart Sass 2.0.0.

Recommendation: math.div(12px, 4px) or calc(12px / 4px)

More info and automated migrator: https://sass-lang.com/d/slash-div",
    },
  ],
  "warningsCount": 1,
}
`;

exports[`StatsTestCases should print correct stats for sass-warnings 2`] = `
"
warning[scss]: Sass Warning
  ┌─ tests/statsCases/sass-warnings/index.scss:2:11
  │
2 │   width: (12px/4px);
  │           ^^^^^^^^ Using / for division outside of calc() is deprecated and will be removed in Dart Sass 2.0.0.

Recommendation: math.div(12px, 4px) or calc(12px / 4px)

More info and automated migrator: https://sass-lang.com/d/slash-div

"
`;

exports[`StatsTestCases should print correct stats for simple 1`] = `
{
  "assets": [
    {
      "chunkNames": [
        "main",
      ],
      "chunks": [
        "main",
      ],
      "emitted": true,
      "info": {
        "development": false,
        "hotModuleReplacement": false,
      },
      "name": "bundle.js",
      "size": 998,
      "type": "asset",
    },
  ],
  "chunks": [
    {
      "entry": true,
      "files": [
        "bundle.js",
      ],
      "id": "main",
      "initial": true,
      "names": [
        "main",
      ],
      "size": 26,
      "type": "chunk",
    },
  ],
  "entrypoints": {
    "main": {
      "assets": [
        {
          "name": "bundle.js",
          "size": 998,
        },
      ],
      "assetsSize": 998,
      "chunks": [
        "main",
      ],
      "name": "main",
    },
  },
  "errors": [],
  "errorsCount": 0,
  "hash": "77107cc3f22df218",
  "modules": [
    {
      "chunks": [
        "main",
      ],
      "id": "2",
      "identifier": "javascript/auto|<PROJECT_ROOT>/tests/statsCases/simple/index.js",
      "issuerPath": [],
      "moduleType": "javascript/auto",
      "name": "./index.js",
      "reasons": [
        {},
      ],
      "size": 26,
      "type": "module",
    },
  ],
  "warnings": [],
  "warningsCount": 0,
}
`;

exports[`StatsTestCases should print correct stats for simple 2`] = `
"Hash: 77107cc3f22df218
    Asset       Size  Chunks             Chunk Names
bundle.js  998 bytes    main  [emitted]  main
Entrypoint main = bundle.js
chunk {main} bundle.js (main) 26 bytes [entry]
[2] ./index.js 26 bytes {main}
    "
`;
